# QtMediaPlayer

./: .gitignore  AudioDecoderThread.cpp  AudioDecoderThread.h  CMakeLists.txt  LICENSE  MediaReaderThread.cpp  MediaReaderThread.h  README.md  VideoDecoderThread.cpp  VideoDecoderThread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
ffmpeg/doc/: ffmpeg-all.html
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc
shaders/: fragmentshader.frag
